<resources>
    <string name="app_name">GoCycling</string>
    <string name="event_details_club">Club</string>
    <string name="event_details_who">Who</string>
    <string name="event_details_when">When</string>
    <string name="event_details_where">Where</string>
    <string name="event_details_button_confirm">Confirm</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="check_details">Check details</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="close">Close</string>
    <string name="confirmation_delete_question">Are you sure to cancel confirmation?</string>
    <string name="event_cancel_question">Are you sure to cancel event?</string>
    <string name="quit_app_question">Close application?</string>
    <string name="action_send">Send</string>
    <string name="prompt_msg">Type a message</string>
    <string name="permission_info">Add permission to ensure that app is running properly. Allow to autostart and background working.</string>
    <string name="open_app_setting">open app settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="redirect_uri_strava">https://gocyclingapp.com/callback</string>
    <string name="club_details_owner">Owner</string>
    <string name="club_details_location">Location</string>
    <string name="club_join_button">Join</string>
    <string name="club_leave_button">Leave</string>
</resources>
