<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/club_detail_swipe_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/club_detail_constraint_layout">

        <TextView
            android:id="@+id/club_detail_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="25dp"
            android:maxLines="2"
            android:text="TextView"
            android:textColor="@color/blackTextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/club_detail_owner_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textSize="10dp"
            android:text="@string/club_details_owner"
            android:textColor="@color/blackTextColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/club_detail_name" />

        <TextView
            android:id="@+id/club_detail_owner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="TextView"
            android:textSize="15dp"
            android:textColor="@color/blackTextColor"
            app:layout_constraintStart_toEndOf="@+id/club_detail_owner_label"
            app:layout_constraintTop_toBottomOf="@+id/club_detail_name"
            app:layout_constraintEnd_toStartOf="@+id/club_detail_show_location"
            />


        <TextView
            android:id="@+id/club_detail_location_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textSize="10dp"
            android:text="@string/club_details_location"
            android:textColor="@color/blackTextColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/club_detail_owner" />

        <TextView
            android:id="@+id/club_detail_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="TextView"
            android:textColor="@color/blackTextColor"
            android:textSize="15dp"
            app:layout_constraintEnd_toStartOf="@+id/club_detail_show_location"
            app:layout_constraintStart_toEndOf="@+id/club_detail_location_label"
            app:layout_constraintTop_toBottomOf="@+id/club_detail_owner" />

        <ImageButton
            android:id="@+id/club_detail_show_location"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="35dp"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginBottom="15dp"
            android:scaleType="fitXY"
            android:background="@drawable/mappin"
            app:layout_constraintTop_toBottomOf="@+id/club_detail_owner"
            app:layout_constraintEnd_toEndOf="parent"
             />

        <TextView
            android:id="@+id/club_detail_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:text="Details"
            android:textColor="@color/blackTextColor"
            android:textSize="15dp"
            app:layout_constraintBottom_toTopOf="@+id/club_join_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/club_detail_location" />


        <Button
            android:id="@+id/club_join_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/primaryDarkColor"
            android:text="@string/event_details_button_confirm"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toTopOf="@+id/club_detail_member_laber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/club_detail_details" />



        <TextView
            android:id="@+id/club_detail_member_laber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="Members"
            android:textColor="@color/blackTextColor"
            android:textSize="10dp"
            app:layout_constraintBottom_toTopOf="@+id/list_of_users_confirmed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/club_join_button" />

        <ListView
            android:id="@+id/club_details_members"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/club_detail_member_laber" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>